--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^18.11.18",
     "esbuild": "^0.14.54",
     "postcss": "^8.4.21",
+    "sass": "^1.58.3",
     "solid-start-node": "^0.2.19",
     "typescript": "^4.9.4",
     "vite": "^3.2.5"
