--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "scripts": {
     "dev": "solid-start dev",
     "build": "solid-start build",
-    "start": "solid-start start"
+    "start": "solid-start start",
+    "pretty": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "pretty-fix": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint-fix": "eslint --fix \"src/**/*.{ts,tsx}\""
   },
   "type": "module",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "esbuild": "^0.14.54",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "solid-start-node": "^0.2.19",
     "typescript": "^4.9.4",
